hero section complete

--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Summer Sale</title>
     <!-- css file link -->
-    <link rel="stylesheet" href="./assets/css/styles.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+  </head>
+  <body>
+    <main class="hero">
+      <section class="hero-container">
+        <div class="hero-wrapper">
+          <div class="hero-content">
+            <h2 class="hero-heading">---SALE FEVER---</h2>
+            <h1 class="hero-title">
+              Purchase TK 200 or  
+              above & get <span class="discount-off">20% off</span>
+            </h1>
+           <div class="discount">
+             <p class="promo-title">Use Promo Code</p>
+            <button class="promo-btn">SELL200</button>
+           </div>
+          </div>
+          <div class="hero-img">
+            <img src="./assets/images/summer-img.png" alt="Summer Sale" />
+          </div>
+        </div>
+      </section>
+    </main>
+
     <!-- js file link -->
     <script src="./assets/js/main.js"></script>
-</body>
+  </body>
 </html>
