--- a/index.html
+++ b/index.html
@@ -4,30 +4,223 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Summer Sale</title>
+    <!-- bootstrapIcon cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
     <!-- css file link -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <main class="hero">
-      <section class="hero-container">
+    <!-- hero section start here -->
+    <section class="hero">
+      <div class="hero-container">
         <div class="hero-wrapper">
           <div class="hero-content">
             <h2 class="hero-heading">---SALE FEVER---</h2>
             <h1 class="hero-title">
-              Purchase TK 200 or  
-              above & get <span class="discount-off">20% off</span>
+              Purchase TK 200 or above & get
+              <span class="discount-off">20% off</span>
             </h1>
-           <div class="discount">
-             <p class="promo-title">Use Promo Code</p>
-            <button class="promo-btn">SELL200</button>
-           </div>
+            <div class="discount">
+              <p class="promo-title">Use Promo Code</p>
+              <button class="btn">SELL200</button>
+            </div>
           </div>
           <div class="hero-img">
             <img src="./assets/images/summer-img.png" alt="Summer Sale" />
           </div>
         </div>
-      </section>
+      </div>
+    </section>
+    <!-- hero section end here -->
+
+    <!-- main section code start here -->
+    <main>
+      <div class="main">
+        <!-- Kitchenware section start -->
+        <div class="main-container">
+          <h1>Kitchenware</h1>
+          <div class="main-content">
+            <div class="item-container">
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod1.png" alt="prod1" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">K. Accessories</h2>
+                  <p class="price">39.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod2.png" alt="prod2" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">K. Accessories</h2>
+                  <p class="price">25.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod3.png" alt="prod3" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">Home Cooker</h2>
+                  <p class="price">49.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod1.png" alt="prod1" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">K. Accessories</h2>
+                  <p class="price">39.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Kitchenware section end -->
+
+        <!-- Sportswear section start -->
+        <div class="main-container">
+          <h1>Sportswear</h1>
+          <div class="main-content">
+            <div class="item-container">
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod4.png" alt="prod1" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">Sports Back Cap</h2>
+                  <p class="price">49.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod5.png" alt="prod2" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">Full Jersey Set</h2>
+                  <p class="price">69.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod6.png" alt="prod3" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">Sports cates</h2>
+                  <p class="price">159.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Sportswear section end -->
+
+        <!-- Furniture section start -->
+        <div class="main-container">
+          <h1>Furniture</h1>
+          <div class="main-content furniture-bottom">
+            <div class="item-container">
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod7.png" alt="prod1" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">Single Relax Chair</h2>
+                  <p class="price">185.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod8.png" alt="prod2" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">Children play</h2>
+                  <p class="price">299.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+              <div class="items">
+                <div class="items-card">
+                  <img src="./assets/images/prod9.png" alt="prod3" />
+                  <div class="star">
+                    <i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i
+                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h2 class="item-name">Flexible Sofa</h2>
+                  <p class="price">339.00 TK</p>
+                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Furniture section end -->
+      </div>
     </main>
+    <!-- main section code end here -->
 
     <!-- js file link -->
     <script src="./assets/js/main.js"></script>
