coupon section added

--- a/index.html
+++ b/index.html
@@ -89,19 +89,29 @@
                   <button class="btn btn-add">Add To Cart</button>
                 </div>
               </div>
-              <div class="items">
-                <div class="items-card">
-                  <img src="./assets/images/prod1.png" alt="prod1" />
-                  <div class="star">
-                    <i class="bi bi-star-fill"></i
-                    ><i class="bi bi-star-fill"></i
-                    ><i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
-                    <i class="bi bi-star"></i>
+
+              <div>
+                <div class="coupon">
+                  <h1>Have coupon?</h1>
+                  <div class="coupon-area">
+                    <input type="text" placeholder="Coupon code" />
+                    <button class="btn coupon-btn">Apply</button>
                   </div>
-                  <h2 class="item-name">K. Accessories</h2>
-                  <p class="price">39.00 TK</p>
-                  <button class="btn btn-add">Add To Cart</button>
+                </div>
+                <div class="purchase-card">
+                  <div class="product-title">
+                    <p>1. Home Cooker</p>
+                    <p>2. Home Cooker</p>
+                    <p>3. Home Cooker</p>
+                    <hr />
+                    <p>
+                      Total price : <span class="product-price">257.00TK</span>
+                    </p>
+                    <p>Discount : <span class="product-price">51.40TK</span></p>
+                    <p>Total : <span class="product-price">205.00TK</span></p>
+                    <hr />
+                  </div>
+                  <button class="btn purchase-btn">Make Purchase</button>
                 </div>
               </div>
             </div>
@@ -110,7 +120,7 @@
         <!-- Kitchenware section end -->
 
         <!-- Sportswear section start -->
-        <div class="main-container">
+        <div class="main-container sportswear">
           <h1>Sportswear</h1>
           <div class="main-content">
             <div class="item-container">
