--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
         </div>
         <!-- Furniture section end -->
       </div>
-      <!-- product card -->
 
+      <!-- product card -->
       <div class="product-container">
         <div class="coupon">
           <h1>Have coupon?</h1>
@@ -230,6 +230,19 @@
       </div>
     </main>
     <!-- main section code end here -->
+
+    <!-- modal section start here -->
+    <section>
+      <div class="modal modal-show">
+        <div class="modal-content">
+          <img src="./assets/images/congo.png" alt="Congo" />
+          <h1>Congratulations</h1>
+          <p>Your Purchase the product</p>
+          <a href="/" class="btn btn-homePage">Go Home</a>
+        </div>
+      </div>
+    </section>
+    <!-- modal section end here -->
 
     <!-- js file link -->
     <script src="./assets/js/main.js"></script>
