--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
                 <div class="items-card">
                   <img src="./assets/images/prod2.png" alt="prod2" />
                   <div class="star">
-                    <i class="bi bi-star-fill"></i
-                    ><i class="bi bi-star-fill"></i
-                    ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i><i class="bi bi-star"></i>
                     <i class="bi bi-star"></i>
                     <i class="bi bi-star"></i>
                   </div>
@@ -81,7 +80,7 @@
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star"></i>
                   </div>
                   <h2 class="item-name">Home Cooker</h2>
@@ -104,8 +103,8 @@
                   <img src="./assets/images/prod4.png" alt="prod1" />
                   <div class="star">
                     <i class="bi bi-star-fill"></i
-                    ><i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
                     <i class="bi bi-star"></i>
                     <i class="bi bi-star"></i>
                   </div>
@@ -121,7 +120,7 @@
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star"></i>
                   </div>
                   <h2 class="item-name">Full Jersey Set</h2>
@@ -161,7 +160,7 @@
                     <i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star-fill"></i>
                     <i class="bi bi-star"></i>
                   </div>
                   <h2 class="item-name">Single Relax Chair</h2>
@@ -174,10 +173,10 @@
                   <img src="./assets/images/prod8.png" alt="prod2" />
                   <div class="star">
                     <i class="bi bi-star-fill"></i
-                    ><i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
-                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
                   </div>
                   <h2 class="item-name">Children play</h2>
                   <p class="price">299.00 TK</p>
@@ -189,10 +188,10 @@
                   <img src="./assets/images/prod9.png" alt="prod3" />
                   <div class="star">
                     <i class="bi bi-star-fill"></i
-                    ><i class="bi bi-star-fill"></i
                     ><i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
-                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
                   </div>
                   <h2 class="item-name">Flexible Sofa</h2>
                   <p class="price">339.00 TK</p>
