--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
     <!-- hero section end here -->
 
-    <!-- main section code start here -->
+    <!-- main section start here -->
     <main>
       <div class="main">
         <!-- Kitchenware section start -->
@@ -228,7 +228,7 @@
         </div>
       </div>
     </main>
-    <!-- main section code end here -->
+    <!-- main section end here -->
 
     <!-- modal section start here -->
     <section>
