--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     <i class="bi bi-star"></i>
                   </div>
                   <h2 class="item-name">K. Accessories</h2>
-                  <p class="price">39.00 TK</p>
-                  <button class="btn btn-add">Add To Cart</button>
+                  <p class="price"><span id="item-price">39.00</span> TK</p>
+                  <button class="btn btn-add" id="getBtn">Add To Cart</button>
                 </div>
               </div>
               <div class="items">
@@ -69,8 +69,8 @@
                     <i class="bi bi-star"></i>
                   </div>
                   <h2 class="item-name">K. Accessories</h2>
-                  <p class="price">25.00 TK</p>
-                  <button class="btn btn-add">Add To Cart</button>
+                  <p class="price"><span id="item-price2">25.00</span> TK</p>
+                  <button class="btn btn-add" id="getBtn2">Add To Cart</button>
                 </div>
               </div>
               <div class="items">
@@ -84,8 +84,8 @@
                     <i class="bi bi-star"></i>
                   </div>
                   <h2 class="item-name">Home Cooker</h2>
-                  <p class="price">49.00 TK</p>
-                  <button class="btn btn-add">Add To Cart</button>
+                  <p class="price"><span id="item-price3">49.00</span> TK</p>
+                  <button class="btn btn-add" id="getBtn3">Add To Cart</button>
                 </div>
               </div>
             </div>
@@ -219,12 +219,17 @@
             <p>2. Home Cooker</p>
             <p>3. Home Cooker</p>
             <hr />
-            <p>Total price : <span class="product-price">257.00TK</span></p>
+            <p>
+              Total price :
+              <span class="product-price"
+                ><span id="total-price">257.00</span>TK</span
+              >
+            </p>
             <p>Discount : <span class="product-price">51.40TK</span></p>
-            <p>Total : <span class="product-price">205.00TK</span></p>
+            <p>Total : <span class="product-price" ><span id="total">205.00</span>TK</span></p>
             <hr />
           </div>
-          <button class="btn purchase-btn">Make Purchase</button>
+          <button class="btn purchase-btn" onclick="modal()">Make Purchase</button>
         </div>
       </div>
     </main>
@@ -232,7 +237,7 @@
 
     <!-- modal section start here -->
     <section>
-      <div class="modal modal-show">
+      <div class="modal" id="modal-hide">
         <div class="modal-content">
           <img src="./assets/images/congo.png" alt="Congo" />
           <h1>Congratulations</h1>
