--- a/index.html
+++ b/index.html
@@ -214,8 +214,9 @@
           <h1>Have coupon?</h1>
           <div class="coupon-area">
             <input id="couponCode" type="text" placeholder="Coupon code" />
-            <button class="btn coupon-btn" id="coupon-btn">Apply</button>
-            <!--  -->
+            <button disabled class="btn coupon-btn" id="coupon-btn">
+              Apply
+            </button>
           </div>
         </div>
         <div class="purchase-card">
@@ -238,7 +239,7 @@
             </p>
             <hr />
           </div>
-          <button class="btn purchase-btn" id="make-purchase">
+          <button class="btn purchase-btn" disabled id="make-purchase">
             Make Purchase
           </button>
         </div>
@@ -260,6 +261,6 @@
     <!-- modal section end here -->
 
     <!-- js file link -->
-    <script src="./assets/js/main.js"></script>
+    <script module src="./assets/js/main.js"></script>
   </body>
 </html>
