coupon placeholder show

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="coupon">
           <h1>Have coupon?</h1>
           <div class="coupon-area">
-            <input id="couponCode" type="text" placeholder="Coupon code" />
+            <input id="couponCode" type="text" placeholder="Coupon code is SELL200" />
             <button disabled class="btn coupon-btn" id="coupon-btn">
               Apply
             </button>
